@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,6 +27,7 @@ package jdk.javadoc.internal.doclets.toolkit.util;
 
 import javax.lang.model.element.AnnotationMirror;
 import javax.lang.model.element.Element;
+import javax.lang.model.element.ElementKind;
 import javax.lang.model.element.ExecutableElement;
 import javax.lang.model.element.Modifier;
 import javax.lang.model.element.TypeElement;
@@ -53,7 +54,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import jdk.javadoc.internal.doclets.toolkit.BaseConfiguration;
 import jdk.javadoc.internal.doclets.toolkit.BaseOptions;
@@ -97,7 +98,7 @@ import jdk.javadoc.internal.doclets.toolkit.PropertyUtils;
 public class VisibleMemberTable {
 
     public enum Kind {
-        INNER_CLASSES,
+        NESTED_CLASSES,
         ENUM_CONSTANTS,
         FIELDS,
         CONSTRUCTORS,
@@ -106,8 +107,38 @@ public class VisibleMemberTable {
         ANNOTATION_TYPE_MEMBER_REQUIRED,
         PROPERTIES;
 
-        public static final EnumSet<Kind> summarySet = EnumSet.range(INNER_CLASSES, METHODS);
-        public static final EnumSet<Kind> detailSet = EnumSet.range(ENUM_CONSTANTS, METHODS);
+        private static final EnumSet<Kind> defaultSummarySet = EnumSet.of(
+                NESTED_CLASSES, FIELDS, CONSTRUCTORS, METHODS);
+        private static final EnumSet<Kind> enumSummarySet = EnumSet.of(
+                NESTED_CLASSES, ENUM_CONSTANTS, FIELDS, METHODS);
+        private static final EnumSet<Kind> annotationSummarySet = EnumSet.of(
+                FIELDS, ANNOTATION_TYPE_MEMBER_OPTIONAL, ANNOTATION_TYPE_MEMBER_REQUIRED);
+        private static final EnumSet<Kind> defaultDetailSet = EnumSet.of(
+                FIELDS, CONSTRUCTORS, METHODS);
+        private static final EnumSet<Kind> enumDetailSet = EnumSet.of(
+                ENUM_CONSTANTS, FIELDS, METHODS);
+
+        /**
+         * {@return the set of possible member kinds for the summaries section of a type element}
+         * @param kind the kind of type element being documented
+         */
+        public static Set<Kind> forSummariesOf(ElementKind kind) {
+            return switch (kind) {
+                case ANNOTATION_TYPE -> annotationSummarySet;
+                case ENUM -> enumSummarySet;
+                default -> defaultSummarySet;
+            };
+        }
+
+        /**
+         * {@return the set of possible member kinds for the details section of a type element}
+         * @param kind the kind of type element being documented
+         */
+        public static Set<Kind> forDetailsOf(ElementKind kind) {
+            return kind == ElementKind.ENUM
+                    ? enumDetailSet
+                    : defaultDetailSet;
+        }
     }
 
     final TypeElement te;
@@ -118,12 +149,12 @@ public class VisibleMemberTable {
     final Utils utils;
     final VisibleMemberCache mcache;
 
-    private List<VisibleMemberTable> allSuperclasses;
-    private List<VisibleMemberTable> allSuperinterfaces;
-    private List<VisibleMemberTable> parents;
+    private final List<VisibleMemberTable> allSuperclasses;
+    private final List<VisibleMemberTable> allSuperinterfaces;
+    private final List<VisibleMemberTable> parents;
 
     private Map<Kind, List<Element>> visibleMembers = null;
-    private Map<ExecutableElement, PropertyMembers> propertyMap = new HashMap<>();
+    private final Map<ExecutableElement, PropertyMembers> propertyMap = new HashMap<>();
 
     // Keeps track of method overrides
     Map<ExecutableElement, OverriddenMethodInfo> overriddenMethodTable
@@ -199,7 +230,7 @@ public class VisibleMemberTable {
 
         return visibleMembers.getOrDefault(kind, Collections.emptyList()).stream()
                 .filter(p)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -294,7 +325,8 @@ public class VisibleMemberTable {
     }
 
     /**
-     * Returns true if this table contains visible members.
+     * Returns true if this table contains visible members of
+     * any kind, including inherited members.
      *
      * @return true if visible members are present.
      */
@@ -319,36 +351,55 @@ public class VisibleMemberTable {
     }
 
     /**
-     * Returns the property field associated with the property method.
-     * @param propertyMethod the identifying property method
+     * Returns the field for a property identified by any of the methods
+     * for that property.
+     *
+     * @param ee the method
      * @return the field or null if absent
      */
-    public VariableElement getPropertyField(ExecutableElement propertyMethod) {
+    public VariableElement getPropertyField(ExecutableElement ee) {
         ensureInitialized();
-        PropertyMembers pm =  propertyMap.get(propertyMethod);
+        PropertyMembers pm =  propertyMap.get(ee);
         return pm == null ? null : pm.field;
     }
 
     /**
-     * Returns the getter method associated with the property method.
-     * @param propertyMethod the identifying property method
+     * Returns the getter method for a property identified by any of the methods
+     * for that property.
+     *
+     * @param ee the method
      * @return the getter or null if absent
      */
-    public ExecutableElement getPropertyGetter(ExecutableElement propertyMethod) {
+    public ExecutableElement getPropertyGetter(ExecutableElement ee) {
         ensureInitialized();
-        PropertyMembers pm =  propertyMap.get(propertyMethod);
+        PropertyMembers pm =  propertyMap.get(ee);
         return pm == null ? null : pm.getter;
     }
 
     /**
-     * Returns the setter method associated with the property method.
-     * @param propertyMethod the identifying property method
+     * Returns the setter method for a property identified by any of the methods
+     * for that property.
+     *
+     * @param ee the method
      * @return the setter or null if absent
      */
-    public ExecutableElement getPropertySetter(ExecutableElement propertyMethod) {
+    public ExecutableElement getPropertySetter(ExecutableElement ee) {
         ensureInitialized();
-        PropertyMembers pm =  propertyMap.get(propertyMethod);
+        PropertyMembers pm =  propertyMap.get(ee);
         return pm == null ? null : pm.setter;
+    }
+
+    /**
+     * Returns the property method for a property identified by any of the methods
+     * for that property.
+     *
+     * @param ee the method
+     * @return the property method or null if absent
+     */
+    public ExecutableElement getPropertyMethod(ExecutableElement ee) {
+        ensureInitialized();
+        PropertyMembers pm =  propertyMap.get(ee);
+        return pm == null ? null : pm.propertyMethod;
     }
 
     private void computeParents() {
@@ -393,7 +444,7 @@ public class VisibleMemberTable {
 
     void computeVisibleMembers(LocalMemberTable lmt, Kind kind) {
         switch (kind) {
-            case FIELDS: case INNER_CLASSES:
+            case FIELDS: case NESTED_CLASSES:
                 computeVisibleFieldsAndInnerClasses(lmt, kind);
                 return;
 
@@ -408,8 +459,8 @@ public class VisibleMemberTable {
             default:
                 List<Element> list = lmt.getOrderedMembers(kind).stream()
                         .filter(this::mustDocument)
-                        .collect(Collectors.toList());
-                visibleMembers.put(kind, Collections.unmodifiableList(list));
+                        .toList();
+                visibleMembers.put(kind, list);
                 break;
         }
     }
@@ -454,19 +505,16 @@ public class VisibleMemberTable {
 
         // Filter out members in the inherited list that are hidden
         // by this type or should not be inherited at all.
-        List<Element> list = result.stream()
-                .filter(e -> allowInheritedMembers(e, kind, lmt))
-                .collect(Collectors.toList());
-
-        // Prefix local results first
-        list.addAll(0, lmt.getOrderedMembers(kind));
+        Stream<Element> inheritedStream = result.stream()
+                .filter(e -> allowInheritedMembers(e, kind, lmt));
 
         // Filter out elements that should not be documented
-        list = list.stream()
-                .filter(this::mustDocument)
-                .collect(Collectors.toList());
+        // Prefix local results first
+        List<Element> list = Stream.concat(lmt.getOrderedMembers(kind).stream(), inheritedStream)
+                                   .filter(this::mustDocument)
+                                   .toList();
 
-        visibleMembers.put(kind, Collections.unmodifiableList(list));
+        visibleMembers.put(kind, list);
     }
 
     private void computeVisibleMethods(LocalMemberTable lmt) {
@@ -490,9 +538,12 @@ public class VisibleMemberTable {
         // b. are overridden and should not be visible in this type
         // c. are hidden in the type being considered
         // see allowInheritedMethod, which performs the above actions
-        List<Element> list = inheritedMethods.stream()
+        // nb. This statement has side effects that can initialize
+        // members of the overridenMethodTable field, so it must be
+        // evaluated eagerly with toList().
+        List<Element> inheritedMethodsList = inheritedMethods.stream()
                 .filter(e -> allowInheritedMethod((ExecutableElement) e, overriddenByTable, lmt))
-                .collect(Collectors.toList());
+                .toList();
 
         // Filter out the local methods, that do not override or simply
         // overrides a super method, or those methods that should not
@@ -501,21 +552,19 @@ public class VisibleMemberTable {
             OverriddenMethodInfo p = overriddenMethodTable.getOrDefault(m, null);
             return p == null || !p.simpleOverride;
         };
-        List<Element> localList = lmt.getOrderedMembers(Kind.METHODS)
+
+        Stream<ExecutableElement> localStream = lmt.getOrderedMembers(Kind.METHODS)
                 .stream()
                 .map(m -> (ExecutableElement)m)
-                .filter(isVisible)
-                .collect(Collectors.toList());
+                .filter(isVisible);
 
-        // Merge the above lists, making sure the local methods precede the others
-        list.addAll(0, localList);
-
+        // Merge the above list and stream, making sure the local methods precede the others
         // Final filtration of elements
-        list = list.stream()
+        List<Element> list = Stream.concat(localStream,inheritedMethodsList.stream())
                 .filter(this::mustDocument)
-                .collect(Collectors.toList());
+                .toList();
 
-        visibleMembers.put(Kind.METHODS, Collections.unmodifiableList(list));
+        visibleMembers.put(Kind.METHODS, list);
 
         // Copy over overridden tables from the lineage, and finish up.
         for (VisibleMemberTable pvmt : parents) {
@@ -720,7 +769,7 @@ public class VisibleMemberTable {
                     case ENUM:
                     case ANNOTATION_TYPE:
                     case RECORD:
-                        addMember(e, Kind.INNER_CLASSES);
+                        addMember(e, Kind.NESTED_CLASSES);
                         break;
                     case FIELD:
                         addMember(e, Kind.FIELDS);
@@ -754,7 +803,6 @@ public class VisibleMemberTable {
             }
         }
 
-        @SuppressWarnings("preview")
         String getMemberKey(Element e) {
             return new SimpleElementVisitor14<String, Void>() {
                 @Override
@@ -788,35 +836,28 @@ public class VisibleMemberTable {
         }
 
         List<Element> getMembers(String key, Kind kind) {
-            Map <String, List<Element>> map = memberMap.get(kind);
+            Map<String, List<Element>> map = memberMap.get(kind);
             return map.getOrDefault(key, Collections.emptyList());
         }
 
-        List<Element> getPropertyMethods(String methodName, int argcount) {
+        <T extends Element> List<T> getMembers(String key, Kind kind, Class<T> clazz) {
+            Map<String, List<Element>> map = memberMap.get(kind);
+            return map.getOrDefault(key, Collections.emptyList())
+                    .stream()
+                    .map(e -> clazz.cast(e))
+                    .toList();
+        }
+
+        List<ExecutableElement> getPropertyMethods(String methodName, int argcount) {
             return getMembers(methodName + ":" + argcount, Kind.METHODS).stream()
                     .filter(m -> (utils.isPublic(m) || utils.isProtected(m)))
-                    .collect(Collectors.toList());
+                    .map(m -> (ExecutableElement) m)
+                    .toList();
         }
     }
 
-    /**
-     * The properties triad for a property method.
-     */
-    static class PropertyMembers {
-        final VariableElement field;
-        final ExecutableElement getter;
-        final ExecutableElement setter;
-
-        PropertyMembers(VariableElement field, ExecutableElement getter, ExecutableElement setter) {
-            this.field = field;
-            this.getter = getter;
-            this.setter = setter;
-        }
-
-        public String toString() {
-            return ("field: " + field + ", getter: " + getter + ", setter: " + setter);
-        }
-    }
+    record PropertyMembers(ExecutableElement propertyMethod, VariableElement field,
+                           ExecutableElement getter, ExecutableElement setter) { }
 
     /*
      * JavaFX convention notes.
@@ -857,26 +898,26 @@ public class VisibleMemberTable {
             return;
 
         PropertyUtils pUtils = config.propertyUtils;
-        List<ExecutableElement> list = visibleMembers.getOrDefault(Kind.METHODS, Collections.emptyList())
+        List<Element> list = visibleMembers.getOrDefault(Kind.METHODS, Collections.emptyList())
                 .stream()
-                .map(m -> (ExecutableElement)m)
-                .filter(pUtils::isPropertyMethod)
-                .collect(Collectors.toList());
+                .filter(e -> pUtils.isPropertyMethod((ExecutableElement) e))
+                .toList();
 
-        visibleMembers.put(Kind.PROPERTIES, Collections.unmodifiableList(list));
+        visibleMembers.put(Kind.PROPERTIES, list);
 
         List<ExecutableElement> propertyMethods = list.stream()
+                .map(e -> (ExecutableElement) e)
                 .filter(e -> utils.getEnclosingTypeElement(e) == te)
-                .collect(Collectors.toList());
+                .toList();
 
         // Compute additional properties related sundries.
         for (ExecutableElement propertyMethod : propertyMethods) {
             String baseName = pUtils.getBaseName(propertyMethod);
-            List<Element> flist = lmt.getMembers(baseName, Kind.FIELDS);
-            Element field = flist.isEmpty() ? null : flist.get(0);
+            List<VariableElement> flist = lmt.getMembers(baseName, Kind.FIELDS, VariableElement.class);
+            VariableElement field = flist.isEmpty() ? null : flist.get(0);
 
-            Element getter = null, setter = null;
-            List<Element> found = lmt.getPropertyMethods(pUtils.getGetName(propertyMethod), 0);
+            ExecutableElement getter = null, setter = null;
+            List<ExecutableElement> found = lmt.getPropertyMethods(pUtils.getGetName(propertyMethod), 0);
             if (!found.isEmpty()) {
                 // Getters have zero params, no overloads! pick the first.
                 getter = found.get(0);
@@ -885,7 +926,6 @@ public class VisibleMemberTable {
                 // Check if isProperty methods are present ?
                 found = lmt.getPropertyMethods(pUtils.getIsName(propertyMethod), 0);
                 if (!found.isEmpty()) {
-                    String propertyTypeName = propertyMethod.getReturnType().toString();
                     // Check if the return type of property method matches an isProperty method.
                     if (pUtils.hasIsMethod(propertyMethod)) {
                         // Getters have zero params, no overloads!, pick the first.
@@ -895,16 +935,22 @@ public class VisibleMemberTable {
             }
             found = lmt.getPropertyMethods(pUtils.getSetName(propertyMethod), 1);
             if (found != null) {
-                for (Element e : found) {
-                    if (pUtils.isValidSetterMethod((ExecutableElement)e)) {
+                for (ExecutableElement e : found) {
+                    if (pUtils.isValidSetterMethod(e)) {
                         setter = e;
                         break;
                     }
                 }
             }
 
-            propertyMap.put(propertyMethod, new PropertyMembers((VariableElement)field,
-                    (ExecutableElement)getter, (ExecutableElement)setter));
+            PropertyMembers pm = new PropertyMembers(propertyMethod, field, getter, setter);
+            propertyMap.put(propertyMethod, pm);
+            if (getter != null) {
+                propertyMap.put(getter, pm);
+            }
+            if (setter != null) {
+                propertyMap.put(setter, pm);
+            }
 
             // Debugging purposes
             // System.out.println("te: " + te + ": " + utils.getEnclosingTypeElement(propertyMethod) +
@@ -918,20 +964,21 @@ public class VisibleMemberTable {
     Map<ExecutableElement, SoftReference<ImplementedMethods>> implementMethodsFinders = new HashMap<>();
 
     private ImplementedMethods getImplementedMethodsFinder(ExecutableElement method) {
-        SoftReference<ImplementedMethods> imf = implementMethodsFinders.get(method);
-        // IMF does not exist or referent was gc'ed away ?
-        if (imf == null || imf.get() == null) {
-            imf = new SoftReference<>(new ImplementedMethods(method));
-            implementMethodsFinders.put(method, imf);
+        SoftReference<ImplementedMethods> ref = implementMethodsFinders.get(method);
+        ImplementedMethods imf = ref == null ? null : ref.get();
+        // imf does not exist or was gc'ed away?
+        if (imf == null) {
+            imf = new ImplementedMethods(method);
+            implementMethodsFinders.put(method, new SoftReference<>(imf));
         }
-        return imf.get();
+        return imf;
     }
 
     public List<ExecutableElement> getImplementedMethods(ExecutableElement method) {
         ImplementedMethods imf = getImplementedMethodsFinder(method);
         return imf.getImplementedMethods().stream()
                 .filter(m -> getSimplyOverriddenMethod(m) == null)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public TypeMirror getImplementedMethodHolder(ExecutableElement method,
