@@ -56,7 +56,7 @@ import org.xml.sax.InputSource;
 /*
  * @test
  * @library /javax/xml/jaxp/libs
- * @run testng/othervm -DrunSecMngr=true test.astro.XPathAPITest
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow test.astro.XPathAPITest
  * @run testng/othervm test.astro.XPathAPITest
  * @summary test XPath API
  */
