@@ -23,7 +23,7 @@
 
 /**
  * @test
- * @run testng/othervm -Dsun.net.maxDatagramSockets=32 UdpSocket
+ * @run testng/othervm -Djava.security.manager=allow -Dsun.net.maxDatagramSockets=32 UdpSocket
  * @summary Basic test for a Socket to a UDP socket
  */
 
@@ -37,9 +37,9 @@ import java.nio.ByteBuffer;
 import java.nio.channels.DatagramChannel;
 import java.security.Permission;
 import java.util.Arrays;
-import java.util.ArrayList;
 import java.util.ArrayDeque;
 import java.util.Deque;
+import java.net.BindException;
 
 import org.testng.annotations.Test;
 import static org.testng.Assert.*;
@@ -59,7 +59,6 @@ public class UdpSocket {
 
             int port = ((InetSocketAddress) dc.getLocalAddress()).getPort();
             try (Socket s = new Socket(loopback, port, false)) {
-
                 // send datagram with socket output stream
                 byte[] array1 = MESSAGE.getBytes("UTF-8");
                 s.getOutputStream().write(array1);
@@ -133,8 +132,17 @@ public class UdpSocket {
         }
     }
 
+
     private Socket newUdpSocket() throws IOException {
-        return new Socket(InetAddress.getLoopbackAddress(), 8000, false);
+        Socket s = null;
+
+        try {
+            s = new Socket(InetAddress.getLoopbackAddress(), 8000, false);
+        } catch (BindException unexpected) {
+            System.out.println("BindException caught retry Socket creation");
+            s = new Socket(InetAddress.getLoopbackAddress(), 8000, false);
+        }
+        return s;
     }
 
     private void closeAll(Deque<Socket> sockets) throws IOException {
